parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    BYTE
    THEN
    DO
    COMMENT
    newline
    VAR
    CLOSECOM
    SHORT
    EMPTYLINE
    UNION
    OPENCOM
    WHILE
    FUNCTION
    SLASHR
    ALL
    BACKSLASH
    BNEGATE

Grammar

Rule 0     S' -> statementlist
Rule 1     statementlist -> statement
Rule 2     statementlist -> statement_local
Rule 3     statementlist -> statementlist statement
Rule 4     statementlist -> statementlist statement_local
Rule 5     statement -> if
Rule 6     statement -> function
Rule 7     statement -> builtin_func SEMI
Rule 8     statement -> builtin_global SEMI
Rule 9     statement -> else
Rule 10    statement -> for
Rule 11    statement -> expr SEMI
Rule 12    statement -> return SEMI
Rule 13    statement -> break SEMI
Rule 14    statement -> continue SEMI
Rule 15    statement -> struct SEMI
Rule 16    statement -> assign SEMI
Rule 17    statement -> var_decl SEMI
Rule 18    statement -> SEMI
Rule 19    statement_local -> assign SEMI
Rule 20    statement_local -> if
Rule 21    statement_local -> else
Rule 22    statement_local -> for
Rule 23    statement_local -> return SEMI
Rule 24    statement_local -> break SEMI
Rule 25    statement_local -> continue SEMI
Rule 26    statement_local -> var_decl SEMI
Rule 27    statement_local -> struct SEMI
Rule 28    statement_local -> SEMI
Rule 29    modifier -> UNIFORM
Rule 30    modifier -> ATTRIBUTE
Rule 31    modifier -> VARYING
Rule 32    modifier -> INPUT
Rule 33    modifier -> OUTPUT
Rule 34    modifier -> HIGHP
Rule 35    modifier -> MEDIUMP
Rule 36    modifier -> LOWP
Rule 37    type_decl -> INT
Rule 38    type_decl -> FLOAT
Rule 39    type_decl -> BOOL
Rule 40    type_decl -> FLOAT16
Rule 41    type_decl -> DOUBLE
Rule 42    type_decl -> VOID
Rule 43    type_decl -> ID
Rule 44    type_decl -> modifier type_decl
Rule 45    arr_decl -> LSBRACKET NUMBER RSBRACKET
Rule 46    arr_decl -> LSBRACKET RSBRACKET
Rule 47    arr_decl -> arr_decl LSBRACKET NUMBER RSBRACKET
Rule 48    arr_decl -> arr_decl LSBRACKET RSBRACKET
Rule 49    var_basic -> type_decl ID arr_decl
Rule 50    var_basic -> type_decl ID
Rule 51    var_decl -> var_basic
Rule 52    var_decl -> var_basic ASSIGN expr
Rule 53    cmplx_assign -> ASSIGNPLUS
Rule 54    cmplx_assign -> ASSIGNMINUS
Rule 55    cmplx_assign -> ASSIGNDIVIDE
Rule 56    cmplx_assign -> ASSIGNTIMES
Rule 57    cmplx_assign -> ASSIGNBOR
Rule 58    cmplx_assign -> ASSIGNBAND
Rule 59    cmplx_assign -> ASSIGNBXOR
Rule 60    cmplx_assign -> ASSIGN
Rule 61    assign_expr -> ID
Rule 62    assign_expr -> assign_expr DOT assign_expr
Rule 63    assign_expr -> assign_expr LSBRACKET expr RSBRACKET
Rule 64    assign_expr -> assign_expr INC
Rule 65    assign_expr -> assign_expr DEC
Rule 66    assign_expr -> INC assign_expr
Rule 67    assign_expr -> DEC assign_expr
Rule 68    assign -> assign_expr cmplx_assign expr
Rule 69    assign -> assign cmplx_assign expr
Rule 70    assign -> INC assign_expr
Rule 71    assign -> DEC assign_expr
Rule 72    assign -> assign_expr INC
Rule 73    assign -> assign_expr DEC
Rule 74    exprlist -> expr
Rule 75    exprlist -> ID ASSIGN expr
Rule 76    exprlist -> exprlist COMMA expr
Rule 77    exprlist -> exprlist COMMA ID ASSIGN expr
Rule 78    func_call -> LPAREN exprlist RPAREN
Rule 79    func_call -> LPAREN RPAREN
Rule 80    funcdeflist -> type_decl ID
Rule 81    funcdeflist -> type_decl ID arr_decl
Rule 82    funcdeflist -> funcdeflist COMMA type_decl ID arr_decl
Rule 83    funcdeflist -> funcdeflist COMMA type_decl ID
Rule 84    structlist -> var_basic SEMI
Rule 85    structlist -> struct
Rule 86    structlist -> structlist var_basic SEMI
Rule 87    structlist -> structlist struct
Rule 88    struct -> STRUCT ID LBRACKET structlist RBRACKET
Rule 89    struct -> STRUCT LBRACKET structlist RBRACKET ID
Rule 90    function -> type_decl ID LPAREN funcdeflist RPAREN LBRACKET statementlist RBRACKET
Rule 91    function -> type_decl ID LPAREN RPAREN LBRACKET statementlist RBRACKET
Rule 92    function -> type_decl ID LPAREN funcdeflist RPAREN COLON ID LBRACKET statementlist RBRACKET
Rule 93    function -> type_decl ID LPAREN RPAREN COLON ID LBRACKET statementlist RBRACKET
Rule 94    builtin_id -> ID
Rule 95    builtin_id -> FLOAT
Rule 96    builtin_id -> INT
Rule 97    builtin_id -> BOOL
Rule 98    builtin_func -> BUILTIN type_decl ID ASSIGN builtin_id LPAREN funcdeflist RPAREN
Rule 99    builtin_func -> BUILTIN type_decl ID ASSIGN builtin_id LPAREN RPAREN
Rule 100   builtin_global -> BUILTIN type_decl ID arr_decl
Rule 101   builtin_global -> BUILTIN type_decl ID
Rule 102   array_literal -> LSBRACKET exprlist RSBRACKET
Rule 103   array_literal -> LSBRACKET RSBRACKET
Rule 104   obj_lit_list -> ID COLON expr
Rule 105   obj_lit_list -> obj_lit_list COMMA ID COLON expr
Rule 106   obj_literal -> LBRACKET obj_lit_list RBRACKET
Rule 107   obj_literal -> LBRACKET RBRACKET
Rule 108   new -> NEW expr
Rule 109   inc -> expr INC
Rule 110   inc -> INC expr
Rule 111   dec -> expr DEC
Rule 112   dec -> DEC expr
Rule 113   not -> NOT expr
Rule 114   strlit -> STRINGLIT
Rule 115   expr -> NUMBER
Rule 116   expr -> TRUE
Rule 117   expr -> FALSE
Rule 118   expr -> strlit
Rule 119   expr -> ID
Rule 120   expr -> array_literal
Rule 121   expr -> obj_literal
Rule 122   expr -> expr DOT expr
Rule 123   expr -> expr LAND expr
Rule 124   expr -> expr LOR expr
Rule 125   expr -> expr BOR expr
Rule 126   expr -> expr BXOR expr
Rule 127   expr -> expr BAND expr
Rule 128   expr -> expr EQUAL expr
Rule 129   expr -> expr NOTEQUAL expr
Rule 130   expr -> expr GTHAN expr
Rule 131   expr -> expr GTHANEQ expr
Rule 132   expr -> expr LTHAN expr
Rule 133   expr -> expr MOD expr
Rule 134   expr -> expr LTHANEQ expr
Rule 135   expr -> expr PLUS expr
Rule 136   expr -> expr MINUS expr
Rule 137   expr -> expr DIVIDE expr
Rule 138   expr -> expr TIMES expr
Rule 139   expr -> LPAREN expr RPAREN
Rule 140   expr -> expr func_call
Rule 141   expr -> expr LSBRACKET expr RSBRACKET
Rule 142   expr -> expr QEST expr COLON expr
Rule 143   expr -> expr_uminus
Rule 144   expr -> assign2
Rule 145   expr -> not
Rule 146   expr -> new
Rule 147   expr -> inc
Rule 148   expr -> dec
Rule 149   assign_expr2 -> ID
Rule 150   assign_expr2 -> assign_expr2 DOT assign_expr2
Rule 151   assign_expr2 -> assign_expr2 LSBRACKET expr RSBRACKET
Rule 152   assign2 -> assign_expr2 cmplx_assign expr
Rule 153   assign2 -> assign2 cmplx_assign expr
Rule 154   assign2 -> INC assign_expr2
Rule 155   assign2 -> DEC assign_expr2
Rule 156   assign2 -> assign_expr2 INC
Rule 157   assign2 -> assign_expr2 DEC
Rule 158   expr_uminus -> MINUS expr
Rule 159   paren_expr -> LPAREN expr RPAREN
Rule 160   paren_expr -> LPAREN RPAREN
Rule 161   for_decl -> var_decl SEMI expr SEMI assign
Rule 162   for -> FOR LPAREN for_decl RPAREN statement_local
Rule 163   for -> FOR LPAREN for_decl RPAREN LBRACKET statementlist RBRACKET
Rule 164   if -> IF paren_expr statement_local
Rule 165   if -> IF paren_expr LBRACKET statementlist RBRACKET
Rule 166   else -> ELSE statement_local
Rule 167   else -> ELSE LBRACKET statementlist RBRACKET
Rule 168   break -> BREAK
Rule 169   continue -> CONTINUE
Rule 170   return -> RETURN expr
Rule 171   return -> RETURN

Terminals, with rules where they appear

ALL                  : 
ASSIGN               : 52 60 75 77 98 99
ASSIGNBAND           : 58
ASSIGNBOR            : 57
ASSIGNBXOR           : 59
ASSIGNDIVIDE         : 55
ASSIGNMINUS          : 54
ASSIGNPLUS           : 53
ASSIGNTIMES          : 56
ATTRIBUTE            : 30
BACKSLASH            : 
BAND                 : 127
BNEGATE              : 
BOOL                 : 39 97
BOR                  : 125
BREAK                : 168
BUILTIN              : 98 99 100 101
BXOR                 : 126
BYTE                 : 
CLOSECOM             : 
COLON                : 92 93 104 105 142
COMMA                : 76 77 82 83 105
COMMENT              : 
CONTINUE             : 169
DEC                  : 65 67 71 73 111 112 155 157
DIVIDE               : 137
DO                   : 
DOT                  : 62 122 150
DOUBLE               : 41
ELSE                 : 166 167
EMPTYLINE            : 
EQUAL                : 128
FALSE                : 117
FLOAT                : 38 95
FLOAT16              : 40
FOR                  : 162 163
FUNCTION             : 
GTHAN                : 130
GTHANEQ              : 131
HIGHP                : 34
ID                   : 43 49 50 61 75 77 80 81 82 83 88 89 90 91 92 92 93 93 94 98 99 100 101 104 105 119 149
IF                   : 164 165
INC                  : 64 66 70 72 109 110 154 156
INPUT                : 32
INT                  : 37 96
LAND                 : 123
LBRACKET             : 88 89 90 91 92 93 106 107 163 165 167
LOR                  : 124
LOWP                 : 36
LPAREN               : 78 79 90 91 92 93 98 99 139 159 160 162 163
LSBRACKET            : 45 46 47 48 63 102 103 141 151
LTHAN                : 132
LTHANEQ              : 134
MEDIUMP              : 35
MINUS                : 136 158
MOD                  : 133
NEW                  : 108
NOT                  : 113
NOTEQUAL             : 129
NUMBER               : 45 47 115
OPENCOM              : 
OUTPUT               : 33
PLUS                 : 135
QEST                 : 142
RBRACKET             : 88 89 90 91 92 93 106 107 163 165 167
RETURN               : 170 171
RPAREN               : 78 79 90 91 92 93 98 99 139 159 160 162 163
RSBRACKET            : 45 46 47 48 63 102 103 141 151
SEMI                 : 7 8 11 12 13 14 15 16 17 18 19 23 24 25 26 27 28 84 86 161 161
SHORT                : 
SLASHR               : 
STRINGLIT            : 114
STRUCT               : 88 89
THEN                 : 
TIMES                : 138
TRUE                 : 116
UNIFORM              : 29
UNION                : 
VAR                  : 
VARYING              : 31
VOID                 : 42
WHILE                : 
error                : 
newline              : 

Nonterminals, with rules where they appear

arr_decl             : 47 48 49 81 82 100
array_literal        : 120
assign               : 16 19 69 161
assign2              : 144 153
assign_expr          : 62 62 63 64 65 66 67 68 70 71 72 73
assign_expr2         : 150 150 151 152 154 155 156 157
break                : 13 24
builtin_func         : 7
builtin_global       : 8
builtin_id           : 98 99
cmplx_assign         : 68 69 152 153
continue             : 14 25
dec                  : 148
else                 : 9 21
expr                 : 11 52 63 68 69 74 75 76 77 104 105 108 109 110 111 112 113 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 140 141 141 142 142 142 151 152 153 158 159 161 170
expr_uminus          : 143
exprlist             : 76 77 78 102
for                  : 10 22
for_decl             : 162 163
func_call            : 140
funcdeflist          : 82 83 90 92 98
function             : 6
if                   : 5 20
inc                  : 147
modifier             : 44
new                  : 146
not                  : 145
obj_lit_list         : 105 106
obj_literal          : 121
paren_expr           : 164 165
return               : 12 23
statement            : 1 3
statement_local      : 2 4 162 164 166
statementlist        : 3 4 90 91 92 93 163 165 167 0
strlit               : 118
struct               : 15 27 85 87
structlist           : 86 87 88 89
type_decl            : 44 49 50 80 81 82 83 90 91 92 93 98 99 100 101
var_basic            : 51 52 84 86
var_decl             : 17 26 161

Parsing method: LALR

state 0

    (0) S' -> . statementlist
    (1) statementlist -> . statement
    (2) statementlist -> . statement_local
    (3) statementlist -> . statementlist statement
    (4) statementlist -> . statementlist statement_local
    (5) statement -> . if
    (6) statement -> . function
    (7) statement -> . builtin_func SEMI
    (8) statement -> . builtin_global SEMI
    (9) statement -> . else
    (10) statement -> . for
    (11) statement -> . expr SEMI
    (12) statement -> . return SEMI
    (13) statement -> . break SEMI
    (14) statement -> . continue SEMI
    (15) statement -> . struct SEMI
    (16) statement -> . assign SEMI
    (17) statement -> . var_decl SEMI
    (18) statement -> . SEMI
    (19) statement_local -> . assign SEMI
    (20) statement_local -> . if
    (21) statement_local -> . else
    (22) statement_local -> . for
    (23) statement_local -> . return SEMI
    (24) statement_local -> . break SEMI
    (25) statement_local -> . continue SEMI
    (26) statement_local -> . var_decl SEMI
    (27) statement_local -> . struct SEMI
    (28) statement_local -> . SEMI
    (164) if -> . IF paren_expr statement_local
    (165) if -> . IF paren_expr LBRACKET statementlist RBRACKET
    (90) function -> . type_decl ID LPAREN funcdeflist RPAREN LBRACKET statementlist RBRACKET
    (91) function -> . type_decl ID LPAREN RPAREN LBRACKET statementlist RBRACKET
    (92) function -> . type_decl ID LPAREN funcdeflist RPAREN COLON ID LBRACKET statementlist RBRACKET
    (93) function -> . type_decl ID LPAREN RPAREN COLON ID LBRACKET statementlist RBRACKET
    (98) builtin_func -> . BUILTIN type_decl ID ASSIGN builtin_id LPAREN funcdeflist RPAREN
    (99) builtin_func -> . BUILTIN type_decl ID ASSIGN builtin_id LPAREN RPAREN
    (100) builtin_global -> . BUILTIN type_decl ID arr_decl
    (101) builtin_global -> . BUILTIN type_decl ID
    (166) else -> . ELSE statement_local
    (167) else -> . ELSE LBRACKET statementlist RBRACKET
    (162) for -> . FOR LPAREN for_decl RPAREN statement_local
    (163) for -> . FOR LPAREN for_decl RPAREN LBRACKET statementlist RBRACKET
    (115) expr -> . NUMBER
    (116) expr -> . TRUE
    (117) expr -> . FALSE
    (118) expr -> . strlit
    (119) expr -> . ID
    (120) expr -> . array_literal
    (121) expr -> . obj_literal
    (122) expr -> . expr DOT expr
    (123) expr -> . expr LAND expr
    (124) expr -> . expr LOR expr
    (125) expr -> . expr BOR expr
    (126) expr -> . expr BXOR expr
    (127) expr -> . expr BAND expr
    (128) expr -> . expr EQUAL expr
    (129) expr -> . expr NOTEQUAL expr
    (130) expr -> . expr GTHAN expr
    (131) expr -> . expr GTHANEQ expr
    (132) expr -> . expr LTHAN expr
    (133) expr -> . expr MOD expr
    (134) expr -> . expr LTHANEQ expr
    (135) expr -> . expr PLUS expr
    (136) expr -> . expr MINUS expr
    (137) expr -> . expr DIVIDE expr
    (138) expr -> . expr TIMES expr
    (139) expr -> . LPAREN expr RPAREN
    (140) expr -> . expr func_call
    (141) expr -> . expr LSBRACKET expr RSBRACKET
    (142) expr -> . expr QEST expr COLON expr
    (143) expr -> . expr_uminus
    (144) expr -> . assign2
    (145) expr -> . not
    (146) expr -> . new
    (147) expr -> . inc
    (148) expr -> . dec
    (170) return -> . RETURN expr
    (171) return -> . RETURN
    (168) break -> . BREAK
    (169) continue -> . CONTINUE
    (88) struct -> . STRUCT ID LBRACKET structlist RBRACKET
    (89) struct -> . STRUCT LBRACKET structlist RBRACKET ID
    (68) assign -> . assign_expr cmplx_assign expr
    (69) assign -> . assign cmplx_assign expr
    (70) assign -> . INC assign_expr
    (71) assign -> . DEC assign_expr
    (72) assign -> . assign_expr INC
    (73) assign -> . assign_expr DEC
    (51) var_decl -> . var_basic
    (52) var_decl -> . var_basic ASSIGN expr
    (37) type_decl -> . INT
    (38) type_decl -> . FLOAT
    (39) type_decl -> . BOOL
    (40) type_decl -> . FLOAT16
    (41) type_decl -> . DOUBLE
    (42) type_decl -> . VOID
    (43) type_decl -> . ID
    (44) type_decl -> . modifier type_decl
    (114) strlit -> . STRINGLIT
    (102) array_literal -> . LSBRACKET exprlist RSBRACKET
    (103) array_literal -> . LSBRACKET RSBRACKET
    (106) obj_literal -> . LBRACKET obj_lit_list RBRACKET
    (107) obj_literal -> . LBRACKET RBRACKET
    (158) expr_uminus -> . MINUS expr
    (152) assign2 -> . assign_expr2 cmplx_assign expr
    (153) assign2 -> . assign2 cmplx_assign expr
    (154) assign2 -> . INC assign_expr2
    (155) assign2 -> . DEC assign_expr2
    (156) assign2 -> . assign_expr2 INC
    (157) assign2 -> . assign_expr2 DEC
    (113) not -> . NOT expr
    (108) new -> . NEW expr
    (109) inc -> . expr INC
    (110) inc -> . INC expr
    (111) dec -> . expr DEC
    (112) dec -> . DEC expr
    (61) assign_expr -> . ID
    (62) assign_expr -> . assign_expr DOT assign_expr
    (63) assign_expr -> . assign_expr LSBRACKET expr RSBRACKET
    (64) assign_expr -> . assign_expr INC
    (65) assign_expr -> . assign_expr DEC
    (66) assign_expr -> . INC assign_expr
    (67) assign_expr -> . DEC assign_expr
    (49) var_basic -> . type_decl ID arr_decl
    (50) var_basic -> . type_decl ID
    (29) modifier -> . UNIFORM
    (30) modifier -> . ATTRIBUTE
    (31) modifier -> . VARYING
    (32) modifier -> . INPUT
    (33) modifier -> . OUTPUT
    (34) modifier -> . HIGHP
    (35) modifier -> . MEDIUMP
    (36) modifier -> . LOWP
    (149) assign_expr2 -> . ID
    (150) assign_expr2 -> . assign_expr2 DOT assign_expr2
    (151) assign_expr2 -> . assign_expr2 LSBRACKET expr RSBRACKET

    SEMI            shift and go to state 42
    IF              shift and go to state 26
    BUILTIN         shift and go to state 6
    ELSE            shift and go to state 62
    FOR             shift and go to state 63
    NUMBER          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 43
    ID              shift and go to state 27
    LPAREN          shift and go to state 39
    RETURN          shift and go to state 58
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 28
    STRUCT          shift and go to state 60
    INC             shift and go to state 30
    DEC             shift and go to state 14
    INT             shift and go to state 22
    FLOAT           shift and go to state 59
    BOOL            shift and go to state 18
    FLOAT16         shift and go to state 64
    DOUBLE          shift and go to state 4
    VOID            shift and go to state 56
    STRINGLIT       shift and go to state 20
    LSBRACKET       shift and go to state 57
    LBRACKET        shift and go to state 31
    MINUS           shift and go to state 61
    NOT             shift and go to state 5
    NEW             shift and go to state 2
    UNIFORM         shift and go to state 34
    ATTRIBUTE       shift and go to state 45
    VARYING         shift and go to state 65
    INPUT           shift and go to state 32
    OUTPUT          shift and go to state 53
    HIGHP           shift and go to state 17
    MEDIUMP         shift and go to state 11
    LOWP            shift and go to state 51

    modifier                       shift and go to state 49
    not                            shift and go to state 33
    statementlist                  shift and go to state 16
    var_decl                       shift and go to state 35
    type_decl                      shift and go to state 52
    builtin_func                   shift and go to state 37
    expr_uminus                    shift and go to state 23
    assign2                        shift and go to state 3
    else                           shift and go to state 19
    function                       shift and go to state 36
    var_basic                      shift and go to state 54
    statement_local                shift and go to state 7
    builtin_global                 shift and go to state 21
    inc                            shift and go to state 8
    for                            shift and go to state 12
    assign_expr                    shift and go to state 40
    return                         shift and go to state 9
    assign                         shift and go to state 41
    dec                            shift and go to state 55
    assign_expr2                   shift and go to state 46
    obj_literal                    shift and go to state 38
    expr                           shift and go to state 25
    if                             shift and go to state 10
    struct                         shift and go to state 50
    break                          shift and go to state 1
    continue                       shift and go to state 44
    array_literal                  shift and go to state 48
    new                            shift and go to state 13
    strlit                         shift and go to state 47
    statement                      shift and go to state 66

state 1

    (13) statement -> break . SEMI
    (24) statement_local -> break . SEMI

    SEMI            shift and go to state 67


state 2

    (108) new -> NEW . expr
    (115) expr -> . NUMBER
    (116) expr -> . TRUE
    (117) expr -> . FALSE
    (118) expr -> . strlit
    (119) expr -> . ID
    (120) expr -> . array_literal
    (121) expr -> . obj_literal
    (122) expr -> . expr DOT expr
    (123) expr -> . expr LAND expr
    (124) expr -> . expr LOR expr
    (125) expr -> . expr BOR expr
    (126) expr -> . expr BXOR expr
    (127) expr -> . expr BAND expr
    (128) expr -> . expr EQUAL expr
    (129) expr -> . expr NOTEQUAL expr
    (130) expr -> . expr GTHAN expr
    (131) expr -> . expr GTHANEQ expr
    (132) expr -> . expr LTHAN expr
    (133) expr -> . expr MOD expr
    (134) expr -> . expr LTHANEQ expr
    (135) expr -> . expr PLUS expr
    (136) expr -> . expr MINUS expr
    (137) expr -> . expr DIVIDE expr
    (138) expr -> . expr TIMES expr
    (139) expr -> . LPAREN expr RPAREN
    (140) expr -> . expr func_call
    (141) expr -> . expr LSBRACKET expr RSBRACKET
    (142) expr -> . expr QEST expr COLON expr
    (143) expr -> . expr_uminus
    (144) expr -> . assign2
    (145) expr -> . not
    (146) expr -> . new
    (147) expr -> . inc
    (148) expr -> . dec
    (114) strlit -> . STRINGLIT
    (102) array_literal -> . LSBRACKET exprlist RSBRACKET
    (103) array_literal -> . LSBRACKET RSBRACKET
    (106) obj_literal -> . LBRACKET obj_lit_list RBRACKET
    (107) obj_literal -> . LBRACKET RBRACKET
    (158) expr_uminus -> . MINUS expr
    (152) assign2 -> . assign_expr2 cmplx_assign expr
    (153) assign2 -> . assign2 cmplx_assign expr
    (154) assign2 -> . INC assign_expr2
    (155) assign2 -> . DEC assign_expr2
    (156) assign2 -> . assign_expr2 INC
    (157) assign2 -> . assign_expr2 DEC
    (113) not -> . NOT expr
    (108) new -> . NEW expr
    (109) inc -> . expr INC
    (110) inc -> . INC expr
    (111) dec -> . expr DEC
    (112) dec -> . DEC expr
    (149) assign_expr2 -> . ID
    (150) assign_expr2 -> . assign_expr2 DOT assign_expr2
    (151) assign_expr2 -> . assign_expr2 LSBRACKET expr RSBRACKET

    NUMBER          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 43
    ID              shift and go to state 71
    LPAREN          shift and go to state 39
    STRINGLIT       shift and go to state 20
    LSBRACKET       shift and go to state 57
    LBRACKET        shift and go to state 31
    MINUS           shift and go to state 61
    INC             shift and go to state 70
    DEC             shift and go to state 68
    NOT             shift and go to state 5
    NEW             shift and go to state 2

    not                            shift and go to state 33
    inc                            shift and go to state 8
    assign_expr2                   shift and go to state 46
    expr_uminus                    shift and go to state 23
    assign2                        shift and go to state 3
    expr                           shift and go to state 69
    obj_literal                    shift and go to state 38
    new                            shift and go to state 13
    strlit                         shift and go to state 47
    dec                            shift and go to state 55
    array_literal                  shift and go to state 48

state 3

    (144) expr -> assign2 .
    (153) assign2 -> assign2 . cmplx_assign expr
    (53) cmplx_assign -> . ASSIGNPLUS
    (54) cmplx_assign -> . ASSIGNMINUS
    (55) cmplx_assign -> . ASSIGNDIVIDE
    (56) cmplx_assign -> . ASSIGNTIMES
    (57) cmplx_assign -> . ASSIGNBOR
    (58) cmplx_assign -> . ASSIGNBAND
    (59) cmplx_assign -> . ASSIGNBXOR
    (60) cmplx_assign -> . ASSIGN

  ! shift/reduce conflict for ASSIGNPLUS resolved as shift
  ! shift/reduce conflict for ASSIGNMINUS resolved as shift
  ! shift/reduce conflict for ASSIGNDIVIDE resolved as shift
  ! shift/reduce conflict for ASSIGNTIMES resolved as shift
  ! shift/reduce conflict for ASSIGNBOR resolved as shift
  ! shift/reduce conflict for ASSIGNBAND resolved as shift
  ! shift/reduce conflict for ASSIGNBXOR resolved as shift
  ! shift/reduce conflict for ASSIGN resolved as shift
    DOT             reduce using rule 144 (expr -> assign2 .)
    LAND            reduce using rule 144 (expr -> assign2 .)
    LOR             reduce using rule 144 (expr -> assign2 .)
    BOR             reduce using rule 144 (expr -> assign2 .)
    BXOR            reduce using rule 144 (expr -> assign2 .)
    BAND            reduce using rule 144 (expr -> assign2 .)
    EQUAL           reduce using rule 144 (expr -> assign2 .)
    NOTEQUAL        reduce using rule 144 (expr -> assign2 .)
    GTHAN           reduce using rule 144 (expr -> assign2 .)
    GTHANEQ         reduce using rule 144 (expr -> assign2 .)
    LTHAN           reduce using rule 144 (expr -> assign2 .)
    MOD             reduce using rule 144 (expr -> assign2 .)
    LTHANEQ         reduce using rule 144 (expr -> assign2 .)
    PLUS            reduce using rule 144 (expr -> assign2 .)
    MINUS           reduce using rule 144 (expr -> assign2 .)
    DIVIDE          reduce using rule 144 (expr -> assign2 .)
    TIMES           reduce using rule 144 (expr -> assign2 .)
    LSBRACKET       reduce using rule 144 (expr -> assign2 .)
    QEST            reduce using rule 144 (expr -> assign2 .)
    INC             reduce using rule 144 (expr -> assign2 .)
    DEC             reduce using rule 144 (expr -> assign2 .)
    LPAREN          reduce using rule 144 (expr -> assign2 .)
    SEMI            reduce using rule 144 (expr -> assign2 .)
    RPAREN          reduce using rule 144 (expr -> assign2 .)
    RSBRACKET       reduce using rule 144 (expr -> assign2 .)
    COMMA           reduce using rule 144 (expr -> assign2 .)
    COLON           reduce using rule 144 (expr -> assign2 .)
    RBRACKET        reduce using rule 144 (expr -> assign2 .)
    ASSIGNPLUS      shift and go to state 79
    ASSIGNMINUS     shift and go to state 75
    ASSIGNDIVIDE    shift and go to state 80
    ASSIGNTIMES     shift and go to state 78
    ASSIGNBOR       shift and go to state 72
    ASSIGNBAND      shift and go to state 76
    ASSIGNBXOR      shift and go to state 73
    ASSIGN          shift and go to state 74

  ! ASSIGNPLUS      [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNMINUS     [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNDIVIDE    [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNTIMES     [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNBOR       [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNBAND      [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGNBXOR      [ reduce using rule 144 (expr -> assign2 .) ]
  ! ASSIGN          [ reduce using rule 144 (expr -> assign2 .) ]

    cmplx_assign                   shift and go to state 77

state 4

    (41) type_decl -> DOUBLE .

    ID              reduce using rule 41 (type_decl -> DOUBLE .)


state 5

    (113) not -> NOT . expr
    (115) expr -> . NUMBER
    (116) expr -> . TRUE
    (117) expr -> . FALSE
    (118) expr -> . strlit
    (119) expr -> . ID
    (120) expr -> . array_literal
    (121) expr -> . obj_literal
    (122) expr -> . expr DOT expr
    (123) expr -> . expr LAND expr
    (124) expr -> . expr LOR expr
    (125) expr -> . expr BOR expr
    (126) expr -> . expr BXOR expr
    (127) expr -> . expr BAND expr
    (128) expr -> . expr EQUAL expr
    (129) expr -> . expr NOTEQUAL expr
    (130) expr -> . expr GTHAN expr
    (131) expr -> . expr GTHANEQ expr
    (132) expr -> . expr LTHAN expr
    (133) expr -> . expr MOD expr
    (134) expr -> . expr LTHANEQ expr
    (135) expr -> . expr PLUS expr
    (136) expr -> . expr MINUS expr
    (137) expr -> . expr DIVIDE expr
    (138) expr -> . expr TIMES expr
    (139) expr -> . LPAREN expr RPAREN
    (140) expr -> . expr func_call
    (141) expr -> . expr LSBRACKET expr RSBRACKET
    (142) expr -> . expr QEST expr COLON expr
    (143) expr -> . expr_uminus
    (144) expr -> . assign2
    (145) expr -> . not
    (146) expr -> . new
    (147) expr -> . inc
    (148) expr -> . dec
    (114) strlit -> . STRINGLIT
    (102) array_literal -> . LSBRACKET exprlist RSBRACKET
    (103) array_literal -> . LSBRACKET RSBRACKET
    (106) obj_literal -> . LBRACKET obj_lit_list RBRACKET
    (107) obj_literal -> . LBRACKET RBRACKET
    (158) expr_uminus -> . MINUS expr
    (152) assign2 -> . assign_expr2 cmplx_assign expr
    (153) assign2 -> . assign2 cmplx_assign expr
    (154) assign2 -> . INC assign_expr2
    (155) assign2 -> . DEC assign_expr2
    (156) assign2 -> . assign_expr2 INC
    (157) assign2 -> . assign_expr2 DEC
    (113) not -> . NOT expr
    (108) new -> . NEW expr
    (109) inc -> . expr INC
    (110) inc -> . INC expr
    (111) dec -> . expr DEC
    (112) dec -> . DEC expr
    (149) assign_expr2 -> . ID
    (150) assign_expr2 -> . assign_expr2 DOT assign_expr2
    (151) assign_expr2 -> . assign_expr2 LSBRACKET expr RSBRACKET

    NUMBER          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 43
    ID              shift and go to state 71
    LPAREN          shift and go to state 39
    STRINGLIT       shift and go to state 20
    LSBRACKET       shift and go to state 57
    LBRACKET        shift and go to state 31
    MINUS           shift and go to state 61
    INC             shift and go to state 70
    DEC             shift and go to state 68
    NOT             shift and go to state 5
    NEW             shift and go to state 2

    not                            shift and go to state 33
    inc                            shift and go to state 8
    assign_expr2                   shift and go to state 46
    expr_uminus                    shift and go to state 23
    assign2                        shift and go to state 3
    expr                           shift and go to state 81
    obj_literal                    shift and go to state 38
    new                            shift and go to state 13
    strlit                         shift and go to state 47
    dec                            shift and go to state 55
    array_literal                  shift and go to state 48

state 6

    (98) builtin_func -> BUILTIN . type_decl ID ASSIGN builtin_id LPAREN funcdeflist RPAREN
    (99) builtin_func -> BUILTIN . type_decl ID ASSIGN builtin_id LPAREN RPAREN
    (100) builtin_global -> BUILTIN . type_decl ID arr_decl
    (101) builtin_global -> BUILTIN . type_decl ID
    (37) type_decl -> . INT
    (38) type_decl -> . FLOAT
    (39) type_decl -> . BOOL
    (40) type_decl -> . FLOAT16
    (41) type_decl -> . DOUBLE
    (42) type_decl -> . VOID
    (43) type_decl -> . ID
    (44) type_decl -> . modifier type_decl
    (29) modifier -> . UNIFORM
    (30) modifier -> . ATTRIBUTE
    (31) modifier -> . VARYING
    (32) modifier -> . INPUT
    (33) modifier -> . OUTPUT
    (34) modifier -> . HIGHP
    (35) modifier -> . MEDIUMP
    (36) modifier -> . LOWP

    INT             shift and go to state 22
    FLOAT           shift and go to state 59
    BOOL            shift and go to state 18
    FLOAT16         shift and go to state 64
    DOUBLE          shift and go to state 4
    VOID            shift and go to state 56
    ID              shift and go to state 82
    UNIFORM         shift and go to state 34
    ATTRIBUTE       shift and go to state 45
    VARYING         shift and go to state 65
    INPUT           shift and go to state 32
    OUTPUT          shift and go to state 53
    HIGHP           shift and go to state 17
    MEDIUMP         shift and go to state 11
    LOWP            shift and go to state 51

    modifier                       shift and go to state 49
    type_decl                      shift and go to state 83

state 7

    (2) statementlist -> statement_local .

